# LC_math_linalg

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  reasons.cpp  reasons_OLD.cpp  tmp_elimina.cpp
doc/: tensor_development.md  tmp.md
doc/reshaping/: README.md  a.css
include/LC/: tmp._hpp
include/LC/math/: math_defines.h
include/LC/math/concepts/: concepts.hpp  numbers.hpp  scalar.hpp  vectorial.hpp
include/LC/math/linalg/: Tensor.hpp  Tensor.hpp~RF31e476cb.TMP  Tensor_001._hpp  Tensor_OLD._hpp  Vector.hpp  lambda_container.hpp  tmp_utils.hpp
include/LC/math/linalg/Matrix/: Mat.inl  MatImplementation.hpp  Matrix.hpp  mat_concepts.hpp
include/LC/math/linalg/Matrix/containers/: DenseMatrix.hpp  DenseMatrix.inl  FixedMatrix.hpp  containers.hpp
include/LC/math/linalg/Tensor/: FixedTensorContainer.hpp  Tensor.hpp  TensorImpl.hpp
include/LC/math/linalg/Tensor/stuff/: PartialFixedTensorShapeHolder.hpp  TMP_TENSOR_IMPL.hpp  TensorIndex.hpp  TensorIndexShape.hpp  Tensor_dims_index.hpp  init_list_utils.hpp  reshaper.hpp
include/LC/math/linalg/Tensor/tmp/: NTuple.hpp  concrete_type.hpp  derived_from.hpp  overload.hpp  stream_vector_like.hpp  string_utils.hpp
include/LC/math/linalg/Vector/: Vector.hpp  VectorData.hpp  VectorImplementation.hpp  vector_concepts.hpp
src/: tmp.cpp
src/tmp/: string_utils.cpp
tests/: CMakeLists.txt  tmp.cpp
tests/unit_test/: CMakeLists.txt
tests/unit_test/Tensor/: fixed_shape.cpp
tests/unit_test/Tensor/shape/: PartialFixedTensorShapeHolder.cpp  TensorDim.cpp  TensorIndex.cpp  TensorPartialIndexValue.cpp  TensorShape.cpp
